# module4_project1

./: README.md  errors.py  exception.py  items.csv  main.py  pyproject.toml  tests.py  описание
tests/: test_main.py
